modify the safe i/o to rename platform.xml to history/<time>.xml. Also undo fix for bug 57410